# vrpegboard

./: .gitignore  .pre-commit-config.yaml  README.md  fetch_models.py  preview.py  pyproject.toml  scene.py
reference/: indexcontroller-BodyChargingPortRect.3mf  indexcontroller-BodyChargingPortRect.step  indexcontroller.20260606-153600.FCBak  tundratracker-chargingportsketch.3mf  tundratracker-chargingportsketch.step  tundratracker.20260613-180258.FCBak
src/vrpegboard/: __init__.py  build.py  conform.py  connector.py  cradle.py  fitcheck.py  index_controller.py  mesh.py  params.py  pegboard.py  portmark.py  printability.py  tundra_tracker.py
tests/: test_parts.py
