[project]
name = "vrpegboard"
version = "0.1.0"
description = "Parametric, 3D-printable charging mounts for VR gear (Valve Index controllers, Tundra trackers) on a 1\" pegboard"
readme = "README.md"
requires-python = ">=3.11,<3.13"
authors = [{ name = "Hiina", email = "hiina@hiina.space" }]
dependencies = [
    "build123d>=0.8",
    "numpy>=1.26",
]

[project.optional-dependencies]
view = ["ocp_vscode>=2.5"]
analyze = [
    "manifold3d>=3.5.1",
    "networkx>=3.6.1",
    "rtree>=1.4.1",
    "scipy>=1.17.1",
    "trimesh>=4.12.2",
]

[project.scripts]
vrpegboard = "vrpegboard.build:main"

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
    "ty>=0.0.1a1",
    "pre-commit>=3.7",
    "matplotlib>=3.10.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vrpegboard"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.rules]
# build123d's algebra API returns Shape unions and OCP ships no type stubs, so
# these rules are pure library-interaction noise here. Real errors (e.g.
# call-non-callable) stay on.
unresolved-attribute = "warn"
invalid-return-type = "ignore"   # build123d ops return Shape | ShapeList unions
unsupported-operator = "ignore"  # +, -, * overloaded on Shape unions
unresolved-import = "ignore"     # OCP.* has no py.typed
invalid-argument-type = "ignore"  # build123d/manifold3d ops yield un-stubbed Shape/Manifold
                                  # unions passed to mesh.py helpers — same library noise.
